[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "cmake",
    "cmake-build-extension>=0.5.2.dev3",
    "pybind11",
    "mypy"
]
build-backend = "setuptools.build_meta"

[project]
name = "rssdk"
description = "Rugged Science SDK Python Bindings"
readme = "README.md"
authors = [
    {name = "Timothy Lassiter", email = "tim.lassiter@ruggedscience.com"}
]
requires-python = ">=3.7"
keywords = ["rssdk", "rsdio", "rspoe", "cmake"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Cython',
    'Programming Language :: C',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ruggedscience/SDK"
documentation = "https://github.com/ruggedscience/SDK"
repository = "https://github.com/ruggedscience/SDK"

[tool.setuptools_scm]
write_to = "_version.py"