[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "cmake",
    "pybind11",
    "mypy"
]
build-backend = "setuptools.build_meta"

[project]
name = "rssdk"
description = "Rugged Science SDK Python Bindings"
readme = "extras/python/README.md"
authors = [
    {name = "Timothy Lassiter", email = "tim.lassiter@ruggedscience.com"}
]
requires-python = ">=3.7"
keywords = ["rssdk", "rsdio", "rspoe", "cmake"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Cython',
    'Programming Language :: C',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/RuggedScience/SDK/tree/main/extras/python"
documentation = "https://github.com/RuggedScience/SDK/tree/main/extras/python"
repository = "https://github.com/RuggedScience/SDK/tree/main/extras/python"

[tool.setuptools_scm]
write_to = "_version.py"