[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "rssdk"
version = "3.20.0"
description = "Python bindings for RSSDK"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Timothy Lassiter", email = "tim.lassiter@ruggedscience.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/ruggedscience/sdk"

# --- SCIKIT-BUILD CONFIGURATION ---
[tool.scikit-build]
# Where to look for the CMakeLists.txt
cmake.source-dir = "."

# Pass variables to CMake
cmake.define.BUILD_PYTHON_BINDINGS = "ON"
cmake.define.BUILD_TESTS = "OFF"
cmake.define.BUILD_SHARED_LIBS = "OFF"
cmake.define.CMAKE_BUILD_TYPE = "Release"

# Where to install the resulting artifacts inside the wheel
# This puts the .so/.pyd file directly in the 'rssdk' package folder
wheel.packages = ["extras/python/rssdk"] 
