[build-system]
requires = ["setuptools>=43.0.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "rssdk"
description = "Rugged Science SDK Python Bindings"
readme = "README.md"
authors = [
    {name = "Timothy Lassiter", email = "tim.lassiter@ruggedscience.com"}
]
requires-python = ">=3.6"
keywords = ["rssdk", "rsdio", "rspoe", "cmake", "cython"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Cython',
    'Programming Language :: C',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ruggedscience/sdk"
documentation = "https://github.com/ruggedscience/sdk"
repository = "https://github.com/ruggedscience/sdk"

[tool.setuptools.dynamic]
version = {file = "version.txt"}